--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -1,23 +1,25 @@
 ﻿body {
     font-family:sans-serif;
+    margin:0px 0px;
 }
 
 div#page {
-    margin:0px auto;
-    width:700px;
+    margin:0px 0px;
+    width:100%;
+    height:100%;
     border-radius:5px;
 }
 
 div#menu {
-    width: 150px;
-    height: 100%;
+    width: 200px;
+    min-height:400px;
     float:left;
     background-color: rgb(120,120,120);
     border-radius:5px;
 }
 
 div#header {
-    width:700px;
+    width:100%;
     height:70px;
     background-color:rgb(128, 128, 128);
     font-size:40px;
@@ -27,4 +29,7 @@ div#header {
 
 div#pageContent {
     padding:10px;
+    width:auto;
+    float:left;
+    min-height:300px;
 }
