Fixes to SaleItemControl
- Fix connection not open (oops)
- Stylesheet changes
- Fixed that SaleItemControls doesn't appear

--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -46,6 +46,7 @@ div#pageContent {
     background-size: 200px auto;
     background-repeat:no-repeat;
     font-size:12px;
+    display: inline-block;
 }
 
 .saleItemControl_image {
