--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -92,5 +92,18 @@ div#pageContent {
 
 .saleItemControl_lower:hover .saleItemControl_description {
     opacity:1;
+    pointer-events:inherit;
     height:150px;
+}
+
+.sameItemControl_iframe {
+    overflow:hidden;
+    width:100%;
+    height:100%;
+}
+
+/* commentItem */
+.commentItem_container {
+    width:500px;
+    height:100px;
 }
