--- a/StyleSheet.css
+++ b/StyleSheet.css
@@ -3,6 +3,7 @@
 body {
     font-family:sans-serif;
     margin:0px 0px;
+    white-space:nowrap;
 }
 
 div#page {
@@ -10,6 +11,7 @@ div#page {
     width:100%;
     height:100%;
     border-radius:5px;
+    white-space:nowrap;
 }
 
 div#menu {
@@ -34,6 +36,9 @@ div#pageContent {
     width:auto;
     float:left;
     min-height:300px;
+    white-space:nowrap;
+    display: inline;
+    position:absolute;
 }
 
 /* Sale Item Web User Control */
